--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "ajv": "^8.17.1",
     "ajv-keywords": "^5.1.0",
     "bootstrap": "^5.3.3",
+    "jspdf": "^2.5.1",
     "react": "^18.3.1",
     "react-avatar-edit": "^1.2.0",
     "react-bootstrap": "^2.10.4",
@@ -24,6 +25,7 @@
     "react-scripts": "5.0.1",
     "react-toastify": "^10.0.5",
     "redux": "^5.0.1",
+    "uniqid": "^5.4.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
