--- a/package.json
+++ b/package.json
@@ -38,7 +38,8 @@
     "extends": [
       "react-app",
       "react-app/jest"
-    ]
+    ],
+    "rules": {"no-unused-vars": "warn"}
   },
   "browserslist": {
     "production": [
